--- a/package.json
+++ b/package.json
@@ -1,63 +1,42 @@
 {
-	"name": "test",
-	"private": true,
-	"version": "0.0.0",
-	"type": "module",
-	"scripts": {
-		"dev": "vite",
-		"build": "tsc && vite build",
-		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-		"preview": "vite preview"
-	},
-	"dependencies": {
-		"@emotion/react": "^11.11.1",
-		"@emotion/styled": "^11.11.0",
-		"@fontsource/roboto": "^5.0.8",
-		"@fortawesome/fontawesome-free": "^6.4.2",
-		"@mui/icons-material": "^5.14.14",
-		"@mui/material": "^5.14.14",
-		"@mui/styled-engine": "^5.14.14",
-		"@mui/styled-engine-sc": "^6.0.0-alpha.2",
-		"@types/bootstrap": "^5.2.7",
-		"@types/firebase": "^3.2.1",
-		"@types/js-cookie": "^3.0.4",
-		"@types/react-bootstrap": "^0.32.33",
-		"@types/react-redux": "^7.1.27",
-		"@types/react-router-dom": "^5.3.3",
-		"@types/redux-logger": "^3.0.10",
-		"bootstrap": "^5.3.2",
-		"firebase": "^10.5.0",
-		"mdb-react-ui-kit": "^6.3.0",
-		"react": "^17.0.0 || ^18.0.0",
-		"react-bootstrap": "^2.9.0",
-		"react-dom": "^17.0.0 || ^18.0.0",
-		"react-icons": "^4.11.0",
-		"react-router-dom": "^6.16.0",
-		"styled-components": "^6.1.0"
-	},
-	"devDependencies": {
-		"@types/react": "^18.2.15",
-		"@types/react-dom": "^18.2.7",
-		"@typescript-eslint/eslint-plugin": "^6.0.0",
-		"@typescript-eslint/parser": "^6.0.0",
-		"@vitejs/plugin-react": "^4.0.3",
-		"eslint": "^8.45.0",
-		"eslint-plugin-react-hooks": "^4.6.0",
-		"eslint-plugin-react-refresh": "^0.4.3",
-		"typescript": "^5.0.2",
-		"vite": "^4.4.5",
-		"@testing-library/jest-dom": "^5.11.4",
-		"@testing-library/react": "^11.1.0",
-		"@testing-library/user-event": "^12.1.10",
-		"@types/jest": "^26.0.15",
-		"@types/node": "^12.0.0",
-		"react": "^17.0.1",
-		"react-dom": "^17.0.1",
-		"react-scripts": "4.0.1",
-		"web-vitals": "^0.2.4"
-	},
-	"peerDependencies": {
-		"react": "^17.0.0 || ^18.0.0",
-		"react-dom": "^17.0.0 || ^18.0.0"
-	}
+  "name": "workspacer",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-free": "^6.4.2",
+    "@mui/icons-material": "^5.14.15",
+    "@mui/material": "^5.14.15",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "@vitejs/plugin-react": "^4.0.3",
+    "classnames": "^2.3.2",
+    "eslint": "^8.45.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "firebase": "^10.5.0",
+    "js-cookie": "^3.0.5",
+    "mdb-react-ui-kit": "^6.3.0",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.17.0",
+    "redux": "^4.2.1",
+    "redux-logger": "^3.0.6",
+    "typescript": "^5.0.2",
+    "vite": "^4.4.5"
+  }
 }
