--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/material": "^5.14.15",
     "@reduxjs/toolkit": "^1.9.7",
     "@types/react": "^18.2.15",
+    "@types/react-datepicker": "^4.19.1",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
@@ -32,10 +33,13 @@
     "firebase": "^10.5.0",
     "js-cookie": "^3.0.5",
     "mdb-react-ui-kit": "^6.3.0",
+    "react-datepicker": "^4.21.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
+    "react-select": "^5.7.7",
     "redux": "^4.2.1",
     "redux-logger": "^3.0.6",
+    "sass": "^1.69.4",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
